--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
           event: fail
           channel: $SLACK_DEFAULT_CHANNEL
           template: basic_fail_1
-  install_awscli:
+  install-awscli:
     description: install awscli
     steps:
       - run:
@@ -19,7 +19,7 @@ commands:
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscli_package.zip"
             unzip awscli_package.zip
             sudo ./aws/install
-  install_ansible:
+  install-ansible:
     description: install ansible
     steps:
       - run:
@@ -29,7 +29,7 @@ commands:
             sudo apt install software-properties-common -y
             sudo add-apt-repository --yes --update ppa:ansible/ansible
             sudo apt install ansible -y
-  install_nodejs:
+  install-nodejs:
     description: Install Node.js13
     steps:
       - run:
@@ -48,6 +48,20 @@ commands:
             aws --region us-west-2 s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
             aws --region us-west-2 cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
             aws --region us-west-2 cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            SUCCESS=$(curl https://kvdb.io/9BYEY99PnUNepV4xyhRcqf/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            if(( $SUCCESS==1 )); 
+            then
+              cd ~/project/backend
+              npm install
+              npm run migration:revert
+            fi
 
 jobs:
   build-frontend:
@@ -191,7 +205,8 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
-      - install_ansible
+      - install-ansible
+      - install-awscli
       - add_ssh_keys:
           fingerprints: ["49:3d:d2:3e:65:b4:80:93:73:2a:69:74:e8:e5:fb:51"]
       - attach_workspace:
@@ -203,6 +218,28 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment 
+
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - install-awscli
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send migration results to kvdb.io
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+                curl https://kvdb.io/9BYEY99PnUNepV4xyhRcqf/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi
+      - destroy-environment
+      - revert-migrations
 
 workflows:
   default:
@@ -224,3 +261,5 @@ workflows:
               only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
