--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 version: 2.1
 
-
 orbs:
   slack: circleci/slack@4.12.1
 
@@ -62,6 +61,7 @@ commands:
               cd ~/project/backend
               npm install
               npm run migration:revert
+              npm audit fix
             fi
 
 jobs:
