--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -10,6 +10,15 @@
     - ansible_stdout_callback: yaml
     
   pre_tasks:
+    - name: "wait 400 seconds for target connection to become reachable/usable."
+      wait_for_connection:
+        timeout: 400
+
+    - name: "install python for Ansible."
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
+      
     - name: environment variables
       tags: always
       set_fact:
