--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,7 +283,7 @@ jobs:
       - checkout
       - install-ansible
       - install-nodejs
-      - install_awscli
+      - install-awscli
       - add_ssh_keys:
           fingerprints: ["49:3d:d2:3e:65:b4:80:93:73:2a:69:74:e8:e5:fb:51"]
       - attach_workspace:
