--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -270,9 +270,13 @@ jobs:
           command: |
             cd frontend
             npm install --force
+            npm audit fix 
+            npm audit fix --force
+            npm update
             npm run build
             ls > list.txt
             cat list.txt
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment
       - revert-migrations
