--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,10 +245,9 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: cimg/base:stable
+      - image: amazon/aws-cli    
     steps:
       - checkout
-      - install-awscli
       - install-nodejs
       - attach_workspace:
           at: ~/
@@ -269,13 +268,8 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
-            npm install --force
-            npm audit fix 
-            npm audit fix --force
-            npm update
+            npm install
             npm run build
-            ls > list.txt
-            cat list.txt
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment
