--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,9 +245,10 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli    
+      - image: cimg/base:stable  
     steps:
       - checkout
+      - install-awscli
       - install-nodejs
       - attach_workspace:
           at: ~/
@@ -268,7 +269,8 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
-            npm install
+            ls > test.txt
+            cat test.txt
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
