--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,15 @@ commands:
           command: |
               curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
               sudo apt install -y nodejs
+  install-nodejsv18:
+    description: Install Node.js18
+    steps:
+      - run:
+          name: Install Node.js18
+          command: |
+              curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+              sudo apt install -y nodejs
+
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     steps:
@@ -249,7 +258,7 @@ jobs:
     steps:
       - checkout
       - install-awscli
-      - install-nodejs
+      - install-nodejsv18
       - attach_workspace:
           at: ~/
       - run:
