--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,9 +280,9 @@ jobs:
             cd frontend
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            ls > test.txt
-            cat test.txt
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws s3 ls s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} > test.txt
+            cat test.txt
       - destroy-environment
       - revert-migrations
 
@@ -303,7 +303,6 @@ jobs:
           command: |
             cd backend
             npm install --force
-            npm update
       - run:
           name: Deploy backend
           command: |
