--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -22,6 +22,8 @@
     - name: environment variables
       tags: always
       set_fact:
+        NODE_ENV: production
+        VERSION: "1"
         TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
         TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
         TYPEORM_PORT: 5432
@@ -29,6 +31,7 @@
         TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
         TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
         TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATIONS') }}"
+        TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR') }}"
         TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
         
   roles:
