--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -12,10 +12,21 @@
 - name: "Install Dependencies"
   shell: |
     cd ~/app-directory
-    npm i
+    npm install
 
 - name: "Executing node app with PM2"
   shell: |
     cd ~/app-directory/dist
     pm2 stop default
+    # pm2 start npm --start
     pm2 start main.js
+  register: execute_node
+  
+- name:
+  debug:
+    msg: "{{ execute_node.stdout_lines }}"
+    
+- name: "cpnfigure pm2 to start as service"
+  become: true
+  shell: |
+    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
