--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -8,31 +8,20 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-    
-  pre_tasks:
-    - name: "wait 200 seconds for target connection to become reachable/usable."
-      wait_for_connection:
-        timeout: 200
 
-    - name: "install python for Ansible."
-      become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
-      
-    - name: environment variables
-      tags: always
-      set_fact:
-        NODE_ENV: production
-        VERSION: "1"
-        TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
-        TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
-        TYPEORM_PORT: 5432
-        TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
-        TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
-        TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-        TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATIONS') }}"
-        TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR') }}"
-        TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
-        
+  # Get the environment variables from CircleCI and add to the EC2 instance
+  environment:
+    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+    - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+    - TYPEORM_PORT: 5432
+    - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+    - TYPEORM_ENTITIES: ./modules/domain/**/*.entity{.ts,.js}
+    - TYPEORM_MIGRATIONS: ./migrations/.*ts
+    - TYPEORM_MIGRATIONS_DIR: ./migrations
+    - NODE_ENV: production 
+    - VERSION: "1"
+
   roles:
     - deploy
