--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,6 +350,8 @@ jobs:
             else
               exit 1
             fi
+      - destroy-environment
+      - revert-migrations
 
 workflows:
   default:
