--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,15 +235,6 @@ jobs:
     steps:
       - checkout
       - install-awscli
-      - run:        
-          name: check environment variables
-          command: |
-            echo $TYPEORM_HOST
-            echo $TYPEORM_MIGRATIONS_DIR
-            node -v
-            npm -v
-            ls -la
-
       - run:
           name: Run migrations
           command: |
@@ -361,6 +352,30 @@ jobs:
       - destroy-environment
       - revert-migrations
 
+  cloudfront-update:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - install-nodejsv13
+      - run:
+          name: Save Old Workflow ID to kvdb.io
+          command: |
+            export OldWorkflowID=$(aws --region us-east-1 cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+            echo "Old Wokflow ID: $OldWorkflowID"
+            curl https://kvdb.io/9BYEY99PnUNepV4xyhRcqf/old_workflow_id -d "${OldWorkflowID}"
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+                    --template-file .circleci/files/cloudfront.yml \
+                    --stack-name InitialStack \
+                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+                    --region us-east-1 \
+                    --tags project=udapeople   
+      - revert-migrations
+      - destroy-environment
+
 workflows:
   default:
     jobs:
@@ -389,3 +404,5 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
