--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -354,16 +354,17 @@ jobs:
 
   cloudfront-update:
     docker:
-      - image: amazon/aws-cli
+      - image: cimg/node:13.8.0
     steps:
       - checkout
+      - install-awscli
       - install-nodejsv13
       - run:
           name: Save Old Workflow ID to kvdb.io
           command: |
             export OldWorkflowID=$(aws --region us-east-1 cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             echo "Old Wokflow ID: $OldWorkflowID"
-            curl https://kvdb.io/9BYEY99PnUNepV4xyhRcqf/old_workflow_id -d "${OldWorkflowID}"
+            curl --insecure https://kvdb.io/9BYEY99PnUNepV4xyhRcqf/old_workflow_id -d "${OldWorkflowID}"
       - run:
           name: Update cloudfront distribution
           command: |
