--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -373,10 +373,37 @@ jobs:
                     --stack-name InitialStack \
                     --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
                     --region us-east-1 \
-                    --tags project=udapeople   
+                    --tags project=udapeople  
+            echo "Old Wokflow ID: $OldWorkflowID"
+            echo "Current Wokflow ID: ${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations
       - destroy-environment
 
+  cleanup:
+      docker:
+      - image: cimg/node:13.8.0
+      steps:
+        - checkout
+        - install-awscli
+        - install-nodejsv13
+        - run:
+            name: Get old stack workflow id
+            command: |
+              export STACKS=($(aws cloudformation list-stacks \
+                  --query "StackSummaries[*].StackName" \
+                  --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+              echo Stack names: "${STACKS[@]}"
+              export OldWorkflowID=$(curl --insecure https://kvdb.io/9BYEY99PnUNepV4xyhRcqf/old_workflow_id)
+              echo Old Workflow ID: $OldWorkflowID 
+        - run:
+            name: Remove old stacks and files
+            command: |
+              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+              then
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              fi
 workflows:
   default:
     jobs:
@@ -407,3 +434,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
