--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -374,7 +374,6 @@ jobs:
                     --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
                     --region us-east-1 \
                     --tags project=udapeople  
-            echo "Old Wokflow ID: $OldWorkflowID"
             echo "Current Wokflow ID: ${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations
       - destroy-environment
@@ -387,7 +386,7 @@ jobs:
         - install-awscli
         - install-nodejsv13
         - run:
-            name: Get old stack workflow id
+            name: Get old stack workflow id & Remove old stacks and files
             command: |
               export STACKS=($(aws cloudformation list-stacks \
                   --query "StackSummaries[*].StackName" \
@@ -395,15 +394,16 @@ jobs:
               echo Stack names: "${STACKS[@]}"
               export OldWorkflowID=$(curl --insecure https://kvdb.io/9BYEY99PnUNepV4xyhRcqf/old_workflow_id)
               echo Old Workflow ID: $OldWorkflowID 
-        - run:
-            name: Remove old stacks and files
-            command: |
               if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
               then
+                echo "------------------Delete Confirmed------------------"
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              else
+                echo "------------------Cannot Delete------------------"
               fi
+
 workflows:
   default:
     jobs:
