--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -17,9 +17,9 @@
     - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
     - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
     - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
-    - TYPEORM_ENTITIES: ./modules/domain/**/*.entity{.ts,.js}
-    - TYPEORM_MIGRATIONS: ./migrations/.*ts
-    - TYPEORM_MIGRATIONS_DIR: ./migrations
+    - TYPEORM_ENTITIES: ./src/modules/domain/**/*.entity{.ts,.js}
+    - TYPEORM_MIGRATIONS: ./src/migrations/.*ts
+    - TYPEORM_MIGRATIONS_DIR: ./src/migrations
     - NODE_ENV: production 
     - VERSION: "1"
 
